--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,3 +9,4 @@
 // LAYOUTS - Page layout styles */
 @import '2-layout/_header.scss';
 @import '2-layout/_board.scss';
+@import '2-layout/_nav.scss';
